--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.application.name=webapi
-spring.datasource.url=jdbc:mysql://localhost:3308/kalangoweb
+spring.application.name=JCALANGO
+spring.datasource.url=jdbc:mysql://localhost:3307/apijacalango
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
+server.port=8080
+spring.flyway.baseline-on-migrate=true
